--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -3,21 +3,19 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>HW-09</title>
+  <title>gallery</title>
   <link rel="stylesheet" href="./css/styles.css" />
 </head>
 
 <body>
+
   <main>
-    <ul>
-      <li><a href="./1-gallery.html">Gallery</a></li>
-      <li><a href="./2-form.html">Form</a></li>
-    </ul>
+
   </main>
 
-
-
+  <script type="module" src="./js/1-gallery.js"></script>
 </body>
 
 </html>
